--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "jsx": "react",
     "lib": ["ES2022", "DOM"],
-    "types": ["abell/types", "vite/client"],
+    "types": ["abell/types"],
     "esModuleInterop": true
   },
   "include": ["."],
